Fix navbar readability issues on mobile
- temporary workaround for the container within nav causing overlapping
issues on the smallest breakpoint by removing the auto-margins at those
breakpoints.
- added additional conditions to javascript to address readability
issues on mobile, where the menu text is white on the white header text.

--- a/src/initialise.css
+++ b/src/initialise.css
@@ -88,6 +88,22 @@ article, .section-header {
   &.scrolled {
     padding: 0.5rem 1rem;
   }
+  & .navbar-collapse {
+    justify-content: flex-end;
+
+  }
+  & .container {
+    margin: 0;
+  }
+  @media (--sm-viewport) {
+    & .container {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+  @media (--xs-only) {
+    background-color: #f7f7f7;
+  }
 }
 
 .section-header {
